--- a/TP10Ecole/TD10Ecole.csproj
+++ b/TP10Ecole/TD10Ecole.csproj
@@ -44,8 +44,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Ecole.cs" />
+    <Compile Include="Enseignants.cs" />
+    <Compile Include="Etudiants_echange.cs" />
+    <Compile Include="Etudiants_reguliers.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Secretaires.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
