--- a/TP10Ecole/TD10Ecole.csproj
+++ b/TP10Ecole/TD10Ecole.csproj
@@ -43,8 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contact.cs" />
     <Compile Include="Ecole.cs" />
     <Compile Include="Enseignants.cs" />
+    <Compile Include="Etudiant.cs" />
     <Compile Include="Etudiants_echange.cs" />
     <Compile Include="Etudiants_reguliers.cs" />
     <Compile Include="Program.cs" />
